--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
     "jspdf": "^2.5.1",
     "ngx-cookie-service": "^16.0.1",
