--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/router": "^16.2.0",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
+    "dom-to-image": "^2.6.0",
+    "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
     "ngx-cookie-service": "^16.0.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.32",
@@ -32,6 +35,7 @@
     "@angular/cli": "^16.2.7",
     "@angular/compiler-cli": "^16.2.0",
     "@types/crypto-js": "^4.1.3",
+    "@types/dom-to-image": "^2.6.7",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
