--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-select/ng-select": "^12.0.4",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
     "dom-to-image": "^2.6.0",
@@ -26,6 +27,7 @@
     "jspdf-autotable": "^3.7.1",
     "ngx-cookie-service": "^16.0.1",
     "rxjs": "~7.8.0",
+    "select2": "^4.1.0-rc.0",
     "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -37,6 +39,8 @@
     "@types/crypto-js": "^4.1.3",
     "@types/dom-to-image": "^2.6.7",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.27",
+    "@types/jspdf": "^2.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
