--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "facturacion",
+  "name": "invoicer-frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,11 +18,14 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@ng-select/ng-select": "^12.0.4",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
     "dom-to-image": "^2.6.0",
     "html2pdf.js": "^0.10.1",
+    "invoicer-frontend": "file:",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.1",
     "ngx-cookie-service": "^16.0.1",
@@ -36,6 +39,7 @@
     "@angular-devkit/build-angular": "^16.2.7",
     "@angular/cli": "^16.2.7",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/crypto-js": "^4.1.3",
     "@types/dom-to-image": "^2.6.7",
     "@types/jasmine": "~4.3.0",
